feat: adds work scale service
